# tauri-plugin-apple-events

./: Cargo.toml  LICENSE_MIT  README.md  cliff.toml  renovate.json
.cargo/: config.toml
.github/workflows/: audit.yml  format.yml  lint.yml  release.yml
src/: apple_event.rs  consts.rs  lib.rs
